# banking-ai-platform

./: .gitignore  Dockerfile  README.md
.github/workflows/: ci.yml
banking-ai-platform/: README.md  demo.py  docker-compose.yml  pyproject.toml
banking-ai-platform/config/: settings.yaml
banking-ai-platform/docs/: ai_guide.md
banking-ai-platform/src/ai/: agent.py  embedding_engine.py  vector_store.py
banking-ai-platform/src/pipelines/: orchestration_dag.py
banking-ai-platform/src/quality/: data_quality_engine.py  governance.py
banking-ai-platform/tests/: test_rag_engine.py  test_vector_store.py
docs/: 01_cloud_native_data_platform.md  02_enterprise_data_pipelines.md  03_data_quality_governance.md  04_ai_genai_systems.md  interview_prep_banking_ai.md  interview_prep_mindsprint.md  interview_prep_tcs.md  runbook.md  shreyash_kumar_resume.md  technical_walkthrough.md
html_preview/: 01_cloud_native_data_platform.html  02_enterprise_data_pipelines.html  03_data_quality_governance.html  04_ai_genai_systems.html  ai_guide.html  index.html  interview_prep_banking_ai.html  interview_prep_mindsprint.html  interview_prep_tcs.html  runbook.html  shreyash_kumar_resume.html  technical_walkthrough.html
src/: __init__.py
src/ai/: agent.py  prompts.py  rag_query_engine.py
src/pipelines/: ingestion_beam.py  transform_spark.py
src/quality/: data_quality_engine.py  governance.py
src/utils/: bq_client.py  config_loader.py
tests/: test_data_quality.py  test_embedding_engine.py  test_rag_engine.py  test_vector_store.py
