[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "banking-ai-platform"
version = "1.0.0"
description = "Production-grade data engineering + AI platform for enterprise banking"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Shreyash Kumar", email = "shreyashkumar456@gmail.com"},
]

dependencies = [
    "google-cloud-bigquery>=3.13",
    "google-cloud-storage>=2.14",
    "google-cloud-aiplatform>=1.38",
    "apache-beam[gcp]>=2.52",
    "pyspark>=3.5",
    "apache-airflow>=2.8",
    "apache-airflow-providers-google>=10.13",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "openai>=1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "ruff>=0.1.9",
    "mypy>=1.7",
    "bandit>=1.7",
    "types-PyYAML>=6.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests that hit real GCP services",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
